# customer-churn-prediction-group-2

./: .gitignore  LICENSE  MLproject  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
GenAI Prompt/: Functional Framing For Churn Prediction.md  Part1_Functional_Framing_Draft.md
customer_churn/: __init__.py  config.py  dataset.py  explainability.py  features.py  plots.py
customer_churn/modeling/: __init__.py  predict.py  train.py
docs/: conf.py  index.rst  xai.rst
docs/api/: customer_churn.config.rst  customer_churn.dataset.rst  customer_churn.explainability.rst  customer_churn.features.rst  customer_churn.modeling.predict.rst  customer_churn.modeling.rst  customer_churn.modeling.train.rst  customer_churn.plots.rst  customer_churn.rst  modules.rst
reports/figures/xai/: .gitkeep  shap_force_point_0.html
src/: inference.py  train.py
tests/: test_dataset.py  test_features.py
