[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer_churn"
version = "0.1.0"
description = "E-Commerce Customer Churn Prediction – AI Project Methodology (EPITA 2025-2026)"
authors = [{ name = "Group 2" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["churn", "classification", "lightgbm", "machine-learning"]

dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.26,<2.0",
    "openpyxl>=3.1,<4.0",
    "scikit-learn>=1.4,<2.0",
    "lightgbm>=4.0,<5.0",
    "matplotlib>=3.8,<4.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0,<8.0",
    "black>=24.0,<25.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "Sphinx>=7.0,<8.0",
    "sphinx-rtd-theme>=2.0,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["customer_churn*"]

# ---------------------------------------------------------------------------
# Black (code formatter)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["customer_churn"]
omit   = ["tests/*"]
